--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
 
 <body>
 
+    <!-- Intro Animation Overlay V2 (Cinematic) -->
+    <div id="intro-animation" class="intro-overlay">
+        <div class="intro-shockwave"></div>
+        <div class="intro-grid-container">
+            <div class="intro-grid-floor"></div>
+            <div class="intro-grid-ceiling"></div>
+        </div>
+        <div class="intro-particles" id="intro-particles"></div>
+        <div class="intro-content text-container-3d">
+            <h1 class="intro-title glitch-effect-heavy">
+                <span class="letter-group" id="intro-text-1">ADHYA</span>
+                <span class="letter-group highlight" id="intro-text-2">2K26</span>
+            </h1>
+            <div class="intro-tagline" data-text="INNOVATION • TECHNOLOGY • FUTURE">INNOVATION • TECHNOLOGY • FUTURE
+            </div>
+        </div>
+        <div class="intro-flash-overlay"></div>
+    </div>
+
     <!-- Scroll Progress Bar -->
     <div id="scroll-progress"></div>
 
